--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,20 @@
-{% extends 'blog/base.html' %}
+
 
         <body>
 
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-                {% for post in posts %}
-                    <div class="post">
-                        <div class="date">
-                            {{ post.published_date }}
-                        </div>
-                        <h1><a href="">{{ post.title }}</a></h1>
-                        <p>{{ post.text|linebreaksbr }}</p>
-                    </div>
-                {% endfor %}
-            </div>
-        </div>
+     <div>
+        <h1><a href="/">Django Girls Blog</a></h1>
     </div>
-            {{ posts }}
 
+    {% for post in posts %}
+    <br>
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
 
-            {{ posts }}
+        </div>
+    {% endfor %}   
+
         </body>
     </html>
