--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,6 +5,11 @@ h1 a {
 
 	body{
 		padding-left: 15px;
+        background: #FAF3F0;
+        font-family: 'Pangolin', cursive;
+        font-size: 18;
+
+
 	}
 
 	    .page-header {
@@ -20,7 +25,7 @@ h1 a {
     }
 
     .content {
-        margin-left: 40px;
+        margin-left: 250px;
     }
 
     h1, h2, h3, h4 {
