--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -8,7 +8,7 @@
 
 {{ form.as_p }}
 
-<button type='submit'>Save</button>
+<button type='submit' style="color:#000000;background-color:#ff9400;border-radius: 8px; align-content: right;font-weight: 600;">Save   </button>
 	
 </form>
 
